--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "client": "next dev",
+    "server": "json-server --watch db.json --port 3001",
+    "dev": "concurrently --kill-others \"npm run client\" \"npm run server\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,9 +14,18 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
+    "json-server": "^0.17.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0"
   }
 }
